# sp1-sha256-test

./: README.md
elf/: riscv32im-succinct-zkvm-elf
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
