[package]
version = "0.1.0"
name = "sha256-script"
edition = "2021"
default-run = "sha256"

[[bin]]
name = "sha256"
path = "src/bin/main.rs"

[dependencies]
sp1-sdk = "2.0.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }

[build-dependencies]
sp1-helper = "2.0.0"


